# identity

./: .coverage  .env.example  .flake8  .gitignore  API_ENDPOINTS_DOCUMENTATION.md  CORE_UTILITIES_IMPLEMENTATION.md  Dockerfile  IMPLEMENTATION_STRUCTURE.md  INFRASTRUCTURE_IMPLEMENTATION.md  Makefile  NOTIFICATION_INTEGRATION.md  README.md  alembic.ini  coverage.xml  docker-compose.yml  example_presentation.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: entrypoint.sh
src/: __init__.py  main.py
src/application/: __init__.py
src/application/commands/: __init__.py  create_user_command.py  delete_user_command.py  modify_user_command.py
src/application/dtos/: __init__.py  user_dto.py
src/application/handlers/: __init__.py  create_user_handler.py  delete_user_handler.py  get_user_handler.py  list_users_handler.py  modify_user_handler.py
src/application/interfaces/: __init__.py  command_handler.py  query_handler.py  user_service.py
src/application/queries/: __init__.py  get_user_query.py  list_users_query.py
src/application/services/: __init__.py  user_service.py
src/core/: __init__.py
src/core/auth/: __init__.py
src/core/crypto/: __init__.py
src/core/logging/: __init__.py
src/core/mfa/: __init__.py
src/core/permissions/: __init__.py
src/core/utils/: __init__.py
src/domain/: __init__.py  entities.py  enums.py  events.py  exceptions.py  repositories.py  services.py  value_objects.py
src/identity_domain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/infrastructure/: __init__.py  cache.py  config.py  database.py  messaging.py  models.py  repositories.py  security.py
src/infrastructure/audit/: __init__.py  config.py  event_store.py  processors.py
src/infrastructure/migrations/: env.py
src/infrastructure/models/: __init__.py
src/infrastructure/notifications/: __init__.py  config.py  events.py  handlers.py  processors.py  service.py
src/integration/: __init__.py  adapters.py  config.py
src/presentation/: __init__.py  app.py  config.py
src/presentation/graphql/: __init__.py  resolvers.py  types.py
src/presentation/middleware/: __init__.py  audit.py  auth.py  graphql_audit.py
src/presentation/models/: __init__.py  api.py
src/presentation/rest/: __init__.py  _base.py  auth.py  main.py  mfa.py  public.py  rbac.py  user_management.py  users.py
src/presentation/rest/admin/: __init__.py  audit.py  dashboard.py  system.py  users.py
src/utils/: __init__.py
src/utils/error_handling/: __init__.py
src/utils/helpers/: __init__.py
src/utils/validation/: __init__.py
tests/: __init__.py  test_domain.py  test_infrastructure.py  test_presentation.py
